Fix tab close X button position and visibility
.rstudio-theme-scrollbars seems to have been removed

--- a/inst/templates/rstudio/_large-tabs.scss
+++ b/inst/templates/rstudio/_large-tabs.scss
@@ -21,7 +21,7 @@
 }
 
 // FIXME for light themes
-.rstudio-themes-flat .rstudio-themes-dark.rstudio-themes-scrollbars.rstudio-themes-dark-grey .gwt-TabLayoutPanelTabs {
+.rstudio-themes-flat .rstudio-themes-dark.rstudio-themes-dark-grey .gwt-TabLayoutPanelTabs {
   .gwt-TabLayoutPanelTabInner table.rstheme_tabLayoutCenter {
     tbody > tr > td:last-child > img {
       display: none;
